--- a/src/App.css
+++ b/src/App.css
@@ -15,13 +15,74 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
 }
 
+h2 {
+  font-size: 40px !important;
+  font-weight: 700 !important;
+  letter-spacing: -0.05em;
+}
+
+@media (max-width: 1024px) {
+  h2 {
+    font-size: 30px !important;
+  }
+}
 a {
   text-decoration: none !important;
   outline: none;
 }
 
+p {
+  color: #616161;
+}
+
+ul, li {
+  list-style-type: none;
+  margin-left: 0;
+  padding-left: 0;
+  color: #8B8B8B;
+}
+
 .nav {
   padding-top: 59px;
+}
+
+.blue-btn {
+  background-color: #4737FF;
+  padding: 17px 25px;
+  font-weight: 500;
+  color: white;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.4em;
+}
+
+.heading {
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 0.3em;
+  font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  .big-screen {
+    display: block;
+  }
+
+  .small-screen {
+    display: none;
+  }
+}
+@media (max-width: 768px) {
+  .big-screen {
+    display: none;
+  }
+
+  .small-screen {
+    display: block;
+  }
+}
+.header {
+  height: 100vh;
 }
 
 .offer .nav {
@@ -38,19 +99,14 @@ a {
   color: #616161;
   margin: 30px 0 56px;
 }
-.offer__cont-btn {
-  background-color: #4737FF;
-  padding: 17px 25px;
-  font-weight: 500;
-  color: white;
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: 0.4em;
-}
 .offer__cont-btn:hover {
   color: white;
   background-color: #3529BF;
   cursor: pointer;
+}
+
+.logo {
+  padding: 12px;
 }
 
 .be-static {
@@ -61,6 +117,7 @@ a {
   height: 40vh;
   display: flex;
   align-items: center;
+  width: 50%;
 }
 
 .hero {
@@ -91,6 +148,440 @@ a {
   height: 65px;
   display: block;
   background-size: 100% 100%;
+}
+
+@media (max-width: 768px) {
+  .be-static {
+    height: 393px !important;
+    position: relative !important;
+    padding-top: 50px;
+  }
+
+  .hero {
+    width: 100%;
+    height: 300px;
+    background-size: 100% 100%;
+  }
+
+  .video {
+    background-size: 100% 100% !important;
+    margin: 64px auto;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    width: 50%;
+    height: 50%;
+    background: url("img/video.jpg") center center;
+  }
+
+  .vh-dependet {
+    height: 85%;
+    width: 100%;
+  }
+}
+@media (max-width: 1024px) {
+  .offer__cont-title {
+    font-size: 40px;
+    line-height: 1;
+  }
+}
+@media (max-width: 768px) {
+  header {
+    height: auto !important;
+  }
+  header .nav {
+    padding-top: 20px;
+  }
+
+  .offer .nav {
+    padding-top: 100px;
+  }
+
+  .hero {
+    top: 90px;
+  }
+}
+.problems {
+  padding: 130px 0 0 0;
+}
+.problems-flex {
+  display: flex;
+  align-items: center;
+}
+.problems__author {
+  background: url("img/Ellipse.png") no-repeat left center;
+  padding: 10px 0 10px 105px;
+  margin-top: 60px;
+}
+.problems__author p {
+  margin: 0 !important;
+  font-size: 18px;
+  color: #616161;
+}
+.problems__inner-title {
+  padding: 0 0 30px 0;
+}
+.problems__inner-text {
+  width: 80%;
+  font-size: 18px;
+}
+
+@media (max-width: 1024px) {
+  .problems {
+    padding: 50px 0 0 0;
+  }
+  .problems__inner {
+    padding: 0 !important;
+  }
+  .problems__inner-title {
+    font-size: 30px !important;
+  }
+  .problems__inner-text {
+    width: 100%;
+  }
+  .problems__author {
+    padding: 10px 0 10px 80px;
+  }
+  .problems__author h4 {
+    font-size: 16px;
+  }
+  .problems__author p {
+    font-size: 14px;
+  }
+
+  .problems-flex-img img {
+    width: 100%;
+    height: 60vh;
+  }
+}
+@media (max-width: 768px) {
+  .problems {
+    padding: 0;
+  }
+
+  .problems__inner {
+    padding: 0 !important;
+  }
+
+  .problems-flex-img img {
+    width: 100%;
+    height: 80vh;
+  }
+}
+.services {
+  padding-bottom: 96px;
+}
+.services .nav {
+  padding-top: 150px;
+}
+.services__heading-text {
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 0.3em;
+  font-weight: 600;
+  margin-bottom: 46px;
+}
+.services__heading-lists {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 65px;
+  padding-left: 30px;
+}
+.services__heading-item {
+  padding: 10px 0;
+}
+
+.slick-initialized .slick-slide {
+  margin: 0 20px !important;
+}
+
+.slick-arrow .slick-next {
+  top: 107% !important;
+  background: url("img/Arrow left.png") no-repeat center !important;
+}
+
+.slick-prev, .slick-next {
+  top: 107% !important;
+  right: 0 !important;
+}
+
+.slick-prev {
+  left: 0 !important;
+}
+
+.slick-next {
+  left: 75px;
+}
+
+@media (max-width: 1023px) {
+  .slick-slider {
+    height: 500px !important;
+  }
+
+  .slick-list {
+    height: 100%;
+  }
+}
+.left-padding {
+  padding-left: 80px !important;
+}
+
+.photo-container {
+  position: static !important;
+}
+
+.description {
+  padding: 180px 0 200px;
+}
+.description .nav {
+  padding-top: 0;
+}
+.description-photo {
+  background: url("img/Placeholder-7.png") no-repeat left top;
+  background-size: 80% 80%;
+  width: 50%;
+  height: 90%;
+  position: absolute;
+  left: 0;
+  align-items: center;
+}
+.description-photo img {
+  width: 47%;
+  height: 87%;
+  position: absolute;
+  right: 0;
+  top: 14%;
+  filter: drop-shadow(30px 80px 180px rgba(0, 0, 0, 0.25));
+}
+.description__inner {
+  padding-top: 40px;
+}
+.description__inner-title {
+  width: 80%;
+}
+.description__inner-text {
+  padding: 20px 0 60px;
+  width: 80%;
+}
+.description__inner-item {
+  margin-bottom: 30px;
+}
+.description__inner-item img {
+  display: inline-block;
+}
+.description__inner-item p {
+  display: inline-block;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #000000;
+  letter-spacing: 0.2em;
+  padding: 0 0 0 29px;
+}
+
+@media (max-width: 1444px) {
+  .description-photo {
+    background-size: 90% 75%;
+    height: 47% !important;
+  }
+  .description-photo img {
+    height: 90% !important;
+  }
+}
+@media (max-width: 768px) {
+  .description {
+    padding: 50px 0;
+  }
+
+  .description-photo {
+    background-size: 90% 90%;
+    width: 100%;
+  }
+
+  .left-padding {
+    padding-left: 10px !important;
+  }
+}
+.projects-heading {
+  margin-bottom: 46px;
+}
+.projects__menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  padding: 17px 0;
+}
+.projects__menu-item {
+  text-transform: uppercase;
+  font-size: 15px;
+  letter-spacing: 0.3em;
+  font-weight: 600;
+  padding-left: 25px;
+  color: #B5B5B5;
+}
+.projects__menu-item:hover {
+  color: #1434E1;
+  cursor: pointer;
+}
+.projects__sub {
+  padding: 60px 30px 0;
+}
+.projects__sub-btn {
+  width: 231px;
+  display: block;
+}
+
+.works {
+  padding-top: 108px;
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+}
+.works__item {
+  margin: 30px 30px 0;
+  transition: all 0.8s ease;
+}
+.works__item:hover {
+  filter: drop-shadow(-30px 80px 200px rgba(0, 0, 0, 0.25));
+}
+.works__item:hover img {
+  transition: all 0.8s ease;
+  position: relative;
+  -moz-transform: translate(0px, -20px);
+  -webkit-transform: translate(0px, -20px);
+  -o-transform: translate(0px, -20px);
+  -ms-transform: translate(0px, -20px);
+  transform: translate(0px, -20px);
+}
+.works__item:hover:after {
+  content: "";
+  display: block;
+  position: absolute;
+  background: url("img/Play Button Primary-1.png");
+  width: 65px;
+  height: 65px;
+  left: 40%;
+  top: 40%;
+  background-size: 100% 100%;
+}
+
+@media (max-width: 550px) {
+  .projects__menu {
+    flex-direction: column;
+  }
+
+  .works__item img {
+    width: 310px;
+  }
+}
+.clients .nav {
+  padding-top: 170px;
+}
+.clients-heading {
+  color: #222222;
+}
+.clients-icons {
+  padding-top: 80px;
+  padding-bottom: 146px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.clients-icon {
+  margin: 20px 20px;
+}
+
+footer {
+  background-color: #515151;
+  color: white;
+}
+
+.footer-logo {
+  color: white;
+}
+.footer__menu {
+  padding: 10px 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.footer__menu-item {
+  color: white;
+  font-size: 18px;
+}
+.footer__form {
+  display: table;
+}
+.footer__info-link {
+  color: #747474;
+  font-size: 18px;
+  padding-right: 42px;
+}
+.footer__social {
+  display: table;
+}
+.footer__social a {
+  width: 24px;
+  height: 24px;
+  background-color: #747474;
+  display: inline-block;
+}
+.footer__social-icon {
+  margin-left: 10px;
+}
+
+.footer-logo {
+  padding: 10px 0 !important;
+}
+
+.form-btn {
+  width: 100px;
+  height: 40px;
+  background-color: #C6B393;
+  color: white;
+  display: inline-block !important;
+  margin: 7px 0;
+}
+
+input {
+  height: 40px;
+  padding: 0 12px;
+  margin-right: 15px !important;
+}
+
+.line {
+  border-top: 1px #747474 solid;
+  margin-top: 40px !important;
+  padding-top: 36px !important;
+}
+.line .col-md-8 {
+  padding: 0 !important;
+}
+
+.twitter {
+  mask-image: url("img/Twitter.svg");
+}
+
+.linkedin {
+  mask-image: url("img/Linkedin.png");
+}
+
+.google {
+  mask-image: url("img/Google.png");
+}
+
+.facebook {
+  mask-image: url("img/Facebook.png");
+}
+
+@media (max-width: 425px) {
+  .footer__info-link {
+    padding-right: 10px;
+  }
+
+  .footer-logo {
+    padding: 10px 0 !important;
+  }
 }
 
 /*# sourceMappingURL=App.css.map */
