--- a/src/App.css
+++ b/src/App.css
@@ -322,6 +322,32 @@ ul, li {
     height: 100%;
   }
 }
+@media (max-width: 600px) {
+  .slick-slide img {
+    width: 400px;
+  }
+
+  .slick-slider {
+    height: auto !important;
+  }
+}
+@media (max-width: 464px) {
+  .slick-slider .slick-list {
+    height: 180px;
+  }
+
+  .slick-slide img {
+    width: 300px;
+  }
+
+  .services .nav {
+    padding-top: 50px;
+  }
+
+  .services__heading-lists {
+    padding-left: 0 !important;
+  }
+}
 .left-padding {
   padding-left: 80px !important;
 }
@@ -379,27 +405,37 @@ ul, li {
   padding: 0 0 0 29px;
 }
 
-@media (max-width: 1444px) {
+@media (min-width: 320px) {
   .description-photo {
-    background-size: 90% 75%;
-    height: 47% !important;
+    background-size: 90% 70%;
+    height: 70% !important;
+    width: 100%;
+  }
+}
+@media (min-width: 375px) {
+  .description-photo {
+    background-size: 90% 70%;
+    height: 95% !important;
   }
   .description-photo img {
-    height: 90% !important;
+    height: 80%;
+  }
+}
+@media (min-width: 769px) {
+  .description-photo {
+    background-size: 87% 60%;
+    height: 61% !important;
+    width: 50%;
+  }
+}
+@media (max-width: 375px) {
+  .left-padding {
+    padding-left: 20px !important;
   }
 }
 @media (max-width: 768px) {
   .description {
-    padding: 50px 0;
-  }
-
-  .description-photo {
-    background-size: 90% 90%;
-    width: 100%;
-  }
-
-  .left-padding {
-    padding-left: 10px !important;
+    padding: 50px 0 50px;
   }
 }
 .projects-heading {
@@ -582,6 +618,16 @@ input {
   .footer-logo {
     padding: 10px 0 !important;
   }
+}
+.carousel .carousel-status {
+  display: none;
+}
+
+.carousel .control-next.control-arrow:before {
+  background: url("img/Arrow right.png") no-repeat center right;
+  width: 40px;
+  height: 40px;
+  right: -50px;
 }
 
 /*# sourceMappingURL=App.css.map */
