--- a/src/App.scss
+++ b/src/App.scss
@@ -353,6 +353,28 @@ ul, li{
     height: 100%;
   }
 }
+@media (max-width: 600px) {
+  .slick-slide img {
+    width: 400px;
+  }
+  .slick-slider{
+    height: auto!important;
+  }
+}
+@media (max-width: 464px) {
+  .slick-slider .slick-list {
+    height: 180px;
+  }
+  .slick-slide img {
+    width: 300px;
+  }
+  .services .nav {
+    padding-top: 50px;
+  }
+  .services__heading-lists {
+    padding-left: 0 !important;
+  }
+}
 
 //Description
 .left-padding{
@@ -413,28 +435,69 @@ ul, li{
   }
 }
 
-@media (max-width: 1444px) {
+//@media (max-width: 1444px) {
+//  .description{
+//    &-photo{
+//      background-size: 90% 75%;
+//      height: 80% !important;
+//
+//      img{
+//        height: 90% !important;
+//      }
+//    }
+//  }
+//}
+//@media (max-width: 768px){
+//  .description{
+//    padding: 50px 0;
+//  }
+//  .description-photo{
+//    background-size: 90% 90%;
+//    width: 100%;
+//  }
+//  .left-padding{
+//    padding-left: 10px!important;
+//  }
+//}
+@media (min-width: 320px) {
   .description{
     &-photo{
-      background-size: 90% 75%;
-      height: 47%!important;
+      background-size: 90% 70%;
+      height: 70% !important;
+      width: 100%;
 
-      img{
-        height: 90% !important;
+
+    }
+  }
+}
+@media (min-width: 375px) {
+  .description{
+    &-photo{
+      background-size: 90% 70%;
+      height: 95% !important;
+      & img{
+        height: 80%;
       }
     }
   }
 }
-@media (max-width: 768px){
+@media (min-width: 769px) {
   .description{
-    padding: 50px 0;
+    &-photo{
+      background-size: 87% 60%;
+      height: 61% !important;
+      width: 50%;
+    }
   }
-  .description-photo{
-    background-size: 90% 90%;
-    width: 100%;
+}
+@media (max-width: 375px) {
+  .left-padding {
+    padding-left: 20px !important;
   }
-  .left-padding{
-    padding-left: 10px!important;
+}
+@media (max-width: 768px) {
+  .description {
+    padding: 50px 0 50px;
   }
 }
 
@@ -636,4 +699,16 @@ input{
   .footer-logo{
     padding: 10px 0 !important;
   }
+}
+
+.carousel .carousel-status{
+  display: none;
+}
+
+.carousel .control-next.control-arrow:before{
+  background: url("img/Arrow right.png") no-repeat center right;
+  width: 40px;
+  height: 40px;
+  right: -50px;
+
 }
